--- a/Main Template/css/style.css
+++ b/Main Template/css/style.css
@@ -306,7 +306,7 @@ Home
 	position: relative;
 	height: 100%;
 	min-height: 550px;
-	background-image: url(http://placehold.it/1200x800);
+	background-image: url(https://www.commonapp.org/static/f209cc60b41f7240b44b79a05884929a-dd83eefbc04b64049f6212c76e04d581.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	-webkit-background-size: cover;
