--- a/Main Template/css/style.css
+++ b/Main Template/css/style.css
@@ -705,6 +705,8 @@ Work
     overflow: hidden;
 }
 .single-work img {
+	width: 300px;
+	height: 300px;
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
